/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

syntax = "proto3";

package graphar;
option java_multiple_files = true;
option java_package = "org.apache.graphar.proto";

import "enums.proto";

message AdjacentList {
    AdjListType type = 1;
    FileType file_type = 2;
    string prefix = 3;

    // Statistics message, including
    // 1. the number of vertices base on the AdjListType
    // 2. the number of vertex chunks base on the AdjListType
    // 3. the number of edges of each vertex chunk
    message Statistics {
        int64 num_vertices = 1; 
        int64 num_vertex_chunks = 2;
        repeated int64 edge_nums_of_vertex_chunks = 3;
    }
    optional Statistics statistics = 4;
};
