/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

syntax = "proto3";

package graphar;
option java_multiple_files = true;
option java_package = "org.apache.graphar.proto";
option go_package = "./graphar";

import "property_group.proto";
import "adjacent_list.proto";

message EdgeInfo {
    string type = 1;
    string source_vertex_type = 2;
    string destination_vertex_type = 3;
    int64 chunk_size = 4;
    int64 source_vertex_chunk_size = 5;
    int64 destination_vertex_chunk_size = 6;
    repeated AdjacentList adjacent_list = 7;
    repeated PropertyGroup properties = 8;
    bool is_directed = 9;
    string prefix = 10;

    // Statistics message of the edge, including
    // 1. num_edges: the number of edges
    // 2. num_source_vertices: the number of source vertices
    // 3. num_destination_vertices: the number of destination vertices
    message Statistics {
        int64 num_edges = 1;
        int64 num_source_vertices = 2;
        int64 num_destination_vertices = 3;
    }
    optional Statistics statistics = 11;
    string version = 12;
};
