/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

syntax = "proto3";

package graphar;
option java_multiple_files = true;
option java_package = "org.apache.graphar.proto";
option go_package = "./graphar";

import "vertex_info.proto";
import "edge_info.proto";

message GraphInfo {
    string name = 1;
    repeated VertexInfo vertices = 2;
    repeated EdgeInfo edges = 3;
    string prefix = 4;

    // Statistics of the graph, including the number of vertices and edges
    message Statistics {
        int64 num_vertices = 1;
        int64 num_edges = 2;
    }
    optional Statistics statistics = 5;

    message KeyValue {
        string key = 1;
        string value = 2;
    } 
    repeated KeyValue key_value_metadata = 6;
};
